--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.0
 Django==3.1.3
 django-filter==2.4.0
 djangorestframework==3.12.1
+gunicorn==20.0.4
 Markdown==3.3.3
 pytz==2020.4
 sqlparse==0.4.1
